[workspace]
members = [
    "src/treasury"
]
resolver = "2"

[workspace.dependencies]
candid = "0.10"
ic-cdk = "0.16"
uuid = "1.6"
rstest = "0.18"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
ic-stable-structures = "0.6.7"
ic-cdk-timers = "0.10"
rand = { version = "0.8", default-features = false }
rand_chacha = { version = "0.3", default-features = false }
chrono = { version = "0.4", default-features = false, features = ["std"] }
ciborium = "0.2.1"
ic-certification = "2.4.0"
icrc-ledger-types = "0.1.8"
ic-ledger-types = "0.14.0"